--- a/vignettes/vignettes.Rmd
+++ b/vignettes/vignettes.Rmd
@@ -1,4 +1,4 @@
-# Analyzing scRNAseq data with RCA"
+# Analyzing scRNAseq data with RCA
 Author: Huipeng Li
 
 date: 20/03/2017
@@ -71,11 +71,11 @@ RCAPlot(data_obj,cluster_color_labels = color_to_use);
 Fig1A and Fig1B show the scatter plot and heat map of RCA clusters, labeled with predefined cell types (colors).
 
 ```{r, fig1A,fig.width=.1,out.width = "400px",echo=FALSE,message=TRUE,include=TRUE,fig.cap="Fig 1A: RCA clusters of cell line data in PCA space. Each color represents one cell type."}
-knitr::include_graphics("/Users/wiseflying/R_wd/RCA_package_for_resubmission/package_folder/RCA/vignettes/results/cellline_RCAplot_PCA_external_labels.png")
+knitr::include_graphics("./results/cellline_RCAplot_PCA_external_labels.png")
 ```
 
 ```{r, fig1B,fig.width=.1,out.width = "400px",echo=FALSE,message=FALSE,include=TRUE,fig.cap="Fig 1B: Heat map showing reference component scores, with rows representing reference profiels and columns representing single cells."}
-knitr::include_graphics("/Users/wiseflying/R_wd/RCA_package_for_resubmission/package_folder/RCA/vignettes/results/cellline_RCAplot_heatmap_external_labels.png")
+knitr::include_graphics("./results/cellline_RCAplot_heatmap_external_labels.png")
 ```
 
 
